# cmake_cpp_template

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/foo/: foo.h
lib/src/: foo.cpp
src/: CMakeLists.txt  main.cpp
